----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$


2004-11-09 Garvin Hicking
    * libraries/display_tbl.lib.php, libraries/common.lib.php,
      browse_foreigners.php: RFE #925817 - Abstracted page selector to
      its own function, now create sloped pagination to easily jump
      to any wanted page.
    * read_dump.php: RFE #1053039, show filename of uploaded SQL file
    * sql.php, tbl_indexes.php, libraries/tbl_indexes.lib.php,
      lang/*: Added checks for common problems with table indices.
      Serves as a stub for future checks, currently implemented are
      the ones mentioned in RFE #1044677. The check can be performed
      on multiple tables by using "check table" on selected tables in
      DB structure.

2004-11-02 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: MySQL 4.1.x compatibility for list of initials

2004-11-01 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: for MySQL 4.1.2+ a non-privileged user can do
      a simple SHOW GRANTS to fetch current privileges, so we no longer
      need the control user for this check

2004-11-01 Michal Čihař  <michal@cihar.com>
    * libraries/common.lib.php: Comparsion is == and not = (bug #1054758).

2004-10-29 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php (top index): MySQLi compatibility,
      use PMA_convert_using() in case of non-latin1 user table,
      and fix bug #1054467 (in case of BINARY User field)
    * header.inc.php: bug #1053310, undefined index under OmniSecure server
    * tbl_relation.php: bug #1050424, not positionned on current db
    * tbl_alter.php: bug #1054756, duplicate top menu
    * lang/english: bug #1056724, typo

2004-10-28 Alexander M. Turek  <me@derrabus.de>
    * user_password.php, lang/*.inc.php: Allow usage of old password hashing
      function.

2004-10-27 Alexander M. Turek  <me@derrabus.de>
    * config.inc.php, libraries/config_import.lib.php,